fix: change the shift of projects during animation

--- a/src/app/projects/page.module.css
+++ b/src/app/projects/page.module.css
@@ -29,7 +29,7 @@
   left: 0;
   height: 100%;
   opacity: 0.8;
-  transform: translateX(-10%);
+  transform: translateX(-6%);
   border-radius: 1.5rem;
   animation: appear 0.3s forwards;
 }
